--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.submission.SubmitActivity"
+        <activity android:name=".ui.submission.SubmitFragment"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".ui.main.MainActivity"
